k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: giftsync
  labels:
    name: giftsync
    environment: production
