k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giftsync-api-service
  namespace: giftsync
  labels:
    app: giftsync-api
spec:
  selector:
    app: giftsync-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
